Added new branch

--- a/run_me.ipynb
+++ b/run_me.ipynb
@@ -14,6 +14,217 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculating EV flexibility \n",
+    "\n",
+    "## Generating EV Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Transactions_per_node': {'node_1':       p_min      p_max      e_min      e_max\n",
+       "  0  9.788031  14.926864  11.955360  12.988713\n",
+       "  1  3.019201  21.072761  11.235424  20.389380\n",
+       "  2  7.012242  12.556054   9.109389   9.124148\n",
+       "  3  9.884752  11.773514  11.300548  11.670795,\n",
+       "  'node_2':       p_min      p_max      e_min      e_max\n",
+       "  0  8.914469  19.999885  10.139304  15.240981\n",
+       "  1  8.450826  17.118050  15.210907  16.467826\n",
+       "  2  8.085283  16.373348  11.944665  12.523691\n",
+       "  3  7.535304  20.595431  12.171855  16.694039\n",
+       "  4  8.470694  15.834885   9.990797  11.843882},\n",
+       " 'Agg_u_per_node': {'node_1': 54.17303461095627, 'node_2': 72.77041859683372},\n",
+       " 'Agg_l_per_node': {'node_1': 43.6007202212048, 'node_2': 59.457528383747686}}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "n_nodes = 2\n",
+    "evs_per_node = {'node_1': 4, 'node_2': 5}\n",
+    "p_min = [0,11]\n",
+    "p_max = [11,22]\n",
+    "del_t = 1 # Hours\n",
+    "time_interval = 1 # Hours always 1 hour\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def calculate_u_l(p_min, p_max, e_min, e_max, del_t, t_steps):\n",
+    "    \"\"\" This function calculates the upper and lower limits for the EV\n",
+    "    param p_min: Minimum charging power of the EV\n",
+    "    param p_max: Maximum charging power of the EV\n",
+    "    param e_min: Minimum charging energy of the EV\n",
+    "    param e_max: Maximum charging energy of the EV\n",
+    "    param del_t: The time step for optimization\n",
+    "    param t_steps: The total time steps\n",
+    "    return u: The upper limit\n",
+    "    return l: The lower limit\n",
+    "    \"\"\"\n",
+    "    u = [0]\n",
+    "    l = [0]\n",
+    "    for n in range(1, t_steps+1):\n",
+    "        u.append(min(n*del_t*p_max, e_max-(t_steps-n)*del_t*p_min))\n",
+    "        l.append(max(n*del_t*p_min, e_min-(t_steps-n)*del_t*p_max))\n",
+    "    return u, l\n",
+    "\n",
+    "def generate_ev_transactions(n_sample, p_min, p_max, time_interval):\n",
+    "    \"\"\" This function generates random EV transactions based on the input parameters.\n",
+    "    param n_sample: Number of transactions to generate\n",
+    "    type n_sample: int\n",
+    "    param p_min: Minimum power consumption of the EV\n",
+    "    type p_min: list\n",
+    "    param p_max: Maximum power consumption of the EV\n",
+    "    type p_max: list\n",
+    "    param time_interval: Time interval of the transaction\n",
+    "    type time_interval: int\n",
+    "    return: A dataframe containing the generated transactions. The following columns are included:\n",
+    "            * p_min: Minimum power consumption of the EV\n",
+    "            * p_max: Maximum power consumption of the EV\n",
+    "            * e_min: Minimum energy consumption of the EV\n",
+    "            * e_max: Maximum energy consumption of the EV   \n",
+    "    rtype: pandas.DataFrame\n",
+    "\n",
+    "    \"\"\"\n",
+    "    def sample_x_y(a, b):\n",
+    "        x_prime = np.random.uniform(a, b)\n",
+    "        y_prime = np.random.uniform(a, b)\n",
+    "        \n",
+    "        x = min(x_prime, y_prime)\n",
+    "        y = max(x_prime, y_prime)\n",
+    "        \n",
+    "        return x, y\n",
+    "    sampled_p_min = np.random.uniform(p_min[0], p_min[1], n_sample)\n",
+    "    sampled_p_max = np.random.uniform(p_max[0], p_max[1], n_sample)\n",
+    "    transaction_p_min_pmax = [(sampled_p_min[i], sampled_p_max[i]) for i in range(n_sample)]\n",
+    "    e_min_theoritical = [sampled_p_min[i]*time_interval for i in range(n_sample)]\n",
+    "    e_max_theoritical = [sampled_p_max[i]*time_interval for i in range(n_sample)]\n",
+    "    sampled_e_min_e_max = [(sample_x_y(e_min_theoritical[i], e_max_theoritical[i])) for i in range(n_sample)]\n",
+    "    transactions_sampled = [{'p_min': transaction_p_min_pmax[i][0], 'p_max': transaction_p_min_pmax[i][1], 'e_min': sampled_e_min_e_max[i][0], 'e_max': sampled_e_min_e_max[i][1]} for i in range(n_sample)]\n",
+    "    transactions_sampled_df = pd.DataFrame(transactions_sampled)\n",
+    "\n",
+    "    return transactions_sampled_df\n",
+    "\n",
+    "def generate_flex_limits(n_nodes:int, evs_per_node:dict, p_min=[0,11], p_max=[11,22], del_t=1, time_interval=1):\n",
+    "    \"\"\" This function generates the flexibility limits for the EVs based on the input parameters.\n",
+    "    param n_nodes: Number of nodes in the network\n",
+    "    type n_nodes: int\n",
+    "    evs_per_node: Number of EVs to aggregate per node\n",
+    "    param evs_per_node: Dictionary containing the number of EVs to aggregate per node\n",
+    "    type evs_per_node: dict\n",
+    "    param p_min: Minimum power consumption of the EV\n",
+    "    type p_min: list\n",
+    "    param p_max: Maximum power consumption of the EV\n",
+    "    type p_max: list\n",
+    "    param del_t: Time step\n",
+    "    type del_t: int\n",
+    "    param time_interval: Time interval of the transaction\n",
+    "    type time_interval: int\n",
+    "\n",
+    "    return: A dictionary containing the transactions per node, the aggregated upper limits per node and the aggregated lower limits per node,\n",
+    "            The following keys are included:\n",
+    "            * Transactions_per_node: A dictionary containing the transactions per node. Each dictionary key is the node name and the value is a dataframe containing the transactions\n",
+    "            * Agg_u_per_node: A dictionary containing the aggregated upper limits per node. Each dictionary key is the node name and the value is the aggregated upper limit\n",
+    "            * Agg_l_per_node: A dictionary containing the aggregated lower limits per node. Each dictionary key is the node name and the value is the aggregated lower limit\n",
+    "    rtype: dict\n",
+    "    \"\"\"\n",
+    "    agg_u_per_node = {}\n",
+    "    agg_l_per_node = {}\n",
+    "    transactions_per_node = {}\n",
+    "    for node in range(n_nodes):\n",
+    "        # Generate random EV transactions\n",
+    "        transactions_sampled_df = generate_ev_transactions(evs_per_node[f'node_{node+1}'], p_min, p_max, time_interval)\n",
+    "        transactions_per_node[f'node_{node+1}'] = transactions_sampled_df\n",
+    "        u_matrix = []\n",
+    "        l_matrix = []\n",
+    "        for i in range(evs_per_node[f'node_{node+1}']):\n",
+    "            u, l = calculate_u_l(p_max=transactions_sampled_df.iloc[i]['p_max'],\n",
+    "                        p_min=transactions_sampled_df.iloc[i]['p_min'],\n",
+    "                        e_max=transactions_sampled_df.iloc[i]['e_max'],\n",
+    "                        e_min=transactions_sampled_df.iloc[i]['e_min'],\n",
+    "                        del_t=del_t,\n",
+    "                        t_steps=t_steps)\n",
+    "            u_matrix.append(u)\n",
+    "            l_matrix.append(l)\n",
+    "\n",
+    "        u_matrix = np.array(u_matrix)\n",
+    "        l_matrix = np.array(l_matrix)\n",
+    "\n",
+    "        u_agg = np.sum(u_matrix, axis=0)[-1]\n",
+    "        l_agg = np.sum(l_matrix, axis=0)[-1]\n",
+    "\n",
+    "        agg_u_per_node[f'node_{node+1}'] = u_agg\n",
+    "        agg_l_per_node[f'node_{node+1}'] = l_agg\n",
+    "\n",
+    "    return {'Transactions_per_node':transactions_per_node,\n",
+    "            'Agg_u_per_node':agg_u_per_node,\n",
+    "            'Agg_l_per_node':agg_l_per_node}\n",
+    "\n",
+    "n_nodes = 2\n",
+    "evs_per_node = {'node_1': 4, 'node_2': 5}\n",
+    "p_min = [0,11]\n",
+    "p_max = [11,22]\n",
+    "del_t = 1 # Hours\n",
+    "time_interval = 1 # Hours always 1 hour\n",
+    "\n",
+    "my_dict = generate_flex_limits(n_nodes, evs_per_node, p_min, p_max, del_t, time_interval)\n",
+    "my_dict\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(n_nodes):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        , 26.14544846])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u_agg\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -84,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -229,8 +440,8 @@
      "output_type": "stream",
      "text": [
       "######################## UL vectors for individual EVs ########################\n",
-      "The U vector for EV#1 is: [0, 20, 25, 25]\n",
-      " The L vector for EV#1 is: [0, 0, 0, 15]\n",
+      "The U vector for EV#1 is: [0, 40, 55, 60]\n",
+      " The L vector for EV#1 is: [0, 5, 10, 30]\n",
       "The U vector for EV#2 is: [0, 10, 20, 30]\n",
       " The L vector for EV#2 is: [0, 5, 10, 20]\n",
       "######################## Polytope representation ########################\n",
@@ -266,20 +477,20 @@
       " [ 0 -1 -1]\n",
       " [-1 -1 -1]]\n",
       "The matrix b_poly of Polytope 1 for T = 3 is:\n",
-      "[[ 20]\n",
-      " [ 20]\n",
-      " [ 20]\n",
-      " [ 25]\n",
-      " [ 25]\n",
-      " [ 25]\n",
-      " [ 25]\n",
-      " [  0]\n",
-      " [  0]\n",
-      " [  0]\n",
-      " [  0]\n",
-      " [  0]\n",
-      " [  0]\n",
-      " [-15]]\n",
+      "[[ 40]\n",
+      " [ 40]\n",
+      " [ 40]\n",
+      " [ 55]\n",
+      " [ 55]\n",
+      " [ 55]\n",
+      " [ 60]\n",
+      " [ -5]\n",
+      " [ -5]\n",
+      " [ -5]\n",
+      " [-10]\n",
+      " [-10]\n",
+      " [-10]\n",
+      " [-30]]\n",
       "##################\n",
       "The matrix b_poly of Polytope 2 for T = 3 is:\n",
       "[[ 10]\n",
@@ -306,7 +517,7 @@
     "\n",
     "print('######################## UL vectors for individual EVs ########################')\n",
     "t_steps = 3\n",
-    "u1,l1 = calculate_u_l(p_max=20, p_min=0, e_min = 15, e_max=25, del_t=1, t_steps=3)\n",
+    "u1,l1 = calculate_u_l(p_max=40, p_min=5, e_min = 30, e_max=60, del_t=1, t_steps=3)\n",
     "u2, l2 = calculate_u_l(p_max=10, p_min=5, e_min = 20, e_max=30, del_t=1, t_steps=3)\n",
     "print(f'The U vector for EV#1 is: {u1}\\n The L vector for EV#1 is: {l1}')\n",
     "print(f'The U vector for EV#2 is: {u2}\\n The L vector for EV#2 is: {l2}')\n",
